<resources>
    <string name="widget_name">Напоминания</string>
    <string name="widget_text">Текст напоминания</string>
    <string name="editText">Введите текст напоминания</string>
    <string name="buttonSave">Сохранить</string>
    <string name="radioRed">Красный</string>
    <string name="radioOrange">Оранжевый</string>
    <string name="radioYellow">Желтый</string>
    <string name="radioGreen">Зеленый</string>
    <string name="radioLightBlue">Голубой</string>
    <string name="radioDarkBlue">Синий</string>
    <string name="radioViolet">Фиолетовый</string>
</resources>
