<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/editText"
        android:inputType="textPersonName"
        android:autofillHints="" />

    <RadioGroup
        android:id="@+id/radio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/radioRed"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/red"
            android:text="@string/radioRed"
            android:textSize="24sp" />

        <RadioButton
            android:id="@+id/radioOrange"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/orange"
            android:text="@string/radioOrange"
            android:textSize="24sp" />

        <RadioButton
            android:id="@+id/radioYellow"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/yellow"
            android:text="@string/radioYellow"
            android:textSize="24sp" />

        <RadioButton
            android:id="@+id/radioGreen"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/green"
            android:text="@string/radioGreen"
            android:textSize="24sp" />

        <RadioButton
            android:id="@+id/radioLightBlue"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/light_blue"
            android:text="@string/radioLightBlue"
            android:textSize="24sp" />

        <RadioButton
            android:id="@+id/radioDarkBlue"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/dark_blue"
            android:text="@string/radioDarkBlue"
            android:textSize="24sp" />

        <RadioButton
            android:id="@+id/radioViolet"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/violet"
            android:text="@string/radioViolet"
            android:textSize="24sp" />

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:text="@string/buttonSave"
            android:textSize="24sp" />
    </RadioGroup>
</LinearLayout>